Fixed alignment issue for mobile footer, made checkout button stick to bottom of page on mobile

--- a/mission-ceramics/src/styles/Cart.scss
+++ b/mission-ceramics/src/styles/Cart.scss
@@ -163,8 +163,18 @@
   .submit-wrapper {
     margin: 0 auto;
     margin-top: 20px;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    position: fixed;
+    background-color: #ffffff;
+    padding-top: 10px;
+    padding-left: 40px;
+    padding-right: 40px;
+    padding-bottom: 62px;
+    // height: 100px;
   }
-  .checkout-btn {
-    margin-bottom: 20px;
+  .item:last-child {
+    margin-bottom: 120px;
   }
 }
