--- a/mission-ceramics/src/styles/Footer.scss
+++ b/mission-ceramics/src/styles/Footer.scss
@@ -46,7 +46,8 @@
     float: left;
   }
   .footer-content h3,
-  .footer-content p {
+  .footer-content p,
+  .footer-content a {
     margin: 0;
     margin-left: 8vw;
   }
